--- a/index.html
+++ b/index.html
@@ -1,12 +1,246 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="UTF-8">
+  <title>Девайс</title>
+  <link rel="stylesheet" href="http://fonts.fontstorage.com/import/opensans.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.cssl">
+</head>
 
-  </body>
+<body class="page-body inner-page">
+  <header class="main-header">
+    <nav class="main-header-nav">
+      <a class="main-header-logo">
+        <img class="main-header-logo-img" src="img/logo-header.png" width="163" height="35"
+          alt="Логотип интернет-магазина гаджетов «Девайс»">
+      </a>
+      <div class="main-header-nav-wrapper-first">
+        <form>
+          <label class="main-header-nav-wrapper-first-search visually-hidden" for="search-icon">Поиск по сайту</label>
+          <input class="main-header-nav-wrapper-first-search-icon" id="search-icon" type="search" name="search"
+            placeholder="Поиск по сайту">
+          <input type="submit" value="Найти">
+        </form>
+        <ul class="main-header-nav-site-first-list">
+          <li><a class="main-header-nav-site-first-list-login-link" href="blank.html">Войти</a></li>
+          <li><a href="blank.html">Сравнить</a></li>
+          <li><a href="blank.html">Корзина</a></li>
+        </ul>
+      </div>
+      <div class="main-header-nav-wrapper-second">
+        <ul class="main-header-nav-site-second-list">
+          <li class="main-header-nav-site-second-item"><a href="catalog.html">Каталог товаров</a></li>
+          <li class="main-header-nav-site-second-item"><a href="blank.html">Доставка</a></li>
+          <li class="main-header-nav-site-second-item"><a href="blank.html">Гарантия</a></li>
+          <li class="main-header-nav-site-second-item"><a href="blank.html">Контакты</a></li>
+        </ul>
+      </div>
+      <ul class="main-header-nav-menu-catalog-list">
+        <!-- Здесь будет выпадающее окно -->
+        <li class="main-header-nav-menu-catalog-item">Виртуальная реальность</li>
+        <li class="main-header-nav-menu-catalog-item">Моноподы для селфи</li>
+        <li class="main-header-nav-menu-catalog-item">Экшн-камеры</li>
+        <li class="main-header-nav-menu-catalog-item">Фитнес-браслеты</li>
+        <li class="main-header-nav-menu-catalog-item">Умные часы</li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-container">
+    <section class="page-container-promo">
+      <h2 class="page-container-promo-title visually-hidden">Слайдер</h2>
+      <ul class="page-container-promo-slider-list">
+        <li class="page-container-promo-slider-item">
+          <img class="page-container-promo-slider-photo-item" src="img/promo-slider.png" width="384" height="486"
+            alt="Самая длинная палка для селфи">
+          <div class="page-container-promo-slider-description">
+            <h3 class="page-container-promo-slider-text">Делай селфи,<br>
+              как Бен Стиллер!
+            </h3>
+            <p class="page-container-promo-slider-description">Самая длинная палка для селфи доступна в нашем
+              магазине<br>
+              Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+            </p>
+            <a class="page-container-promo-slider-button">Подробнее</a>
+            <ul class="page-container-promo-slider-featurest-list">
+              <li class="page-container-promo-slider-features-item">
+                <h3 class="page-container-promo-slider-features-item-big">8,5 м</h3>
+                <p class="page-container-promo-slider-features-item-small">Длина палки</p>
+              </li>
+              <li class="page-container-promo-slider-features-item">
+                <h3 class="page-container-promo-slider-features-item-big">5 кг</h3>
+                <p class="page-container-promo-slider-features-item-small">Вес палки</p>
+              </li>
+              <li class="page-container-promo-slider-features-item">
+                <h3 class="page-container-promo-slider-features-item-big">Карбон</h3>
+                <p class="page-container-promo-slider-features-item-small">Материал</p>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="page-container-promo-slider-item"></li>
+        <li class="page-container-promo-slider-item"></li>
+      </ul>
+    </section>
+    <h2 class="visually-hidden">Интернет-магазин гаджетов «DEVICE»</h2>
+    <section class="page-container-popular">
+      <h3 class="page-container-popular-title visually-hidden">Популярное</h3>
+      <ul class="page-container-popular-list">
+        <li class="page-container-popular-item">Виртуальная реальность</li>
+        <li class="page-container-popular-item">Моноподы для селфи</li>
+        <li class="page-container-popular-item">Экшн-камеры</li>
+        <li class="page-container-popular-item">Фитнес-браслеты</li>
+        <li class="page-container-popular-item">Умные часы</li>
+        <li class="page-container-popular-item">Квадрокоптеры</li>
+      </ul>
+    </section>
+    <div class="page-container-service-block">
+      <section class="page-container-service">
+        <h2 class="page-container-service-title visually-hidden">Сервис</h2>
+        <ul class="page-container-service-list">
+          <li class="page-container-service-item">
+            <h3 class="page-container-service-title">Доставка</h3>
+            <p class="page-container-service-description">Мы с удовольствием доставим ваш товар прямо к вашему<br>
+              подъезду совершенно бесплатно! Ведь мы неплохо<br>
+              заработаем, поднимая его на ваш этаж.</p>
+          </li>
+          <a class="page-container-service-button">Доставка</a>
+          <li class="page-container-service-item">
+            <h3 class="page-container-service-title">Гарантия</h3>
+            <p class="page-container-service-description">Если из-за возгорания купленного у нас товара у вас<br>
+              сгорит дом - не переживайте, мы выдадим вам новый.<br>
+              Товар, не дом, конечно же.</p>
+          </li>
+          <a class="page-container-service-button">Гарантия</a>
+          <li class="page-container-service-item">
+            <h3 class="page-container-service-title">Кредит</h3>
+            <p class="page-container-service-description">Залезть в долговую яму стало проще!Кредитные<br>
+              консультанты подберут для вас наиболее выгодные<br>
+              условия кредита. Выгодные для нашего банка, разумеется.</p>
+          </li>
+          <a class="page-container-service-button">Кредит</a>
+        </ul>
+      </section>
+    </div>
+    <section class="page-container-company-logos">
+      <h2>Логотипы</h2>
+      <a class="page-container-company-logo-first"><img src="img/logo-dji.png" width="260" height="100"
+          alt="Логотип «DJI»"></a>
+      <a class="page-container-company-logo-second"><img src="img/logo-sp-gadjets.png" width="260" height="100"
+          alt="Логотип «SP Gadjets»"></a>
+      <a class="page-container-company-logo-third"><img src="img/logo-go-pro.png" width="260" height="100"
+          alt="Логотип «Go Pro»"></a>
+      <a class="page-container-company-logo-fourth"><img src="img/logo-vive.png" width="260" height="100"
+          alt="Логотип «VIVE»"></a>
+    </section>
+    <div class="page-container-contacts-block">
+      <section class="page-container-contacts">
+        <h2 class="page-container-contacts-title">Контакты</h2>
+        <p class="page-container-contacts-info">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
+          проверить работоспособность покупки. Всякое бывает.</p>
+        <a class="page-container-contacts-map-pic"><img src="img/map.png"></a><br>
+        <a class="page-container-contacts-button">НАПИШИТЕ НАМ</a>
+      </section>
+      <section class="modal modal-map">
+        <h2 class="modal-map-title" visually-hidden>Карта</h2>
+        <!-- здесь будет карта -->
+        <a class="modal-close">Закрыть</a>
+      </section>
+    </div>
+    <div class="page-container-contacts-about-us-block">
+      <section class="page-container-contacts-about-us">
+        <h2 class="page-container-contacts-about-us-title">О нас</h2>
+        <p class="page-container-contacts-about-us-description">Огромный выбор гаджетов не оставит равнодушным гика,
+          который есть в каждом из нас</p>
+        <p class="page-container-contacts-about-us-description">Мы можем доставить ваш товар в самые отдаленные точки
+          России! DEVICE работает со многими транспортными компаниями</p>
+        <a class="page-container-contacts-about-us-button">ПОДРОБНЕЕ О НАС</a>
+      </section>
+      <section class="page-container-contacts-way-of-delivery">
+        <h2>Способ доставки</h2>
+        <ul class="page-container-contacts-way-of-delivery-way-of-delivery-list">
+          <li class="page-container-contacts-way-of-delivery-way-of-delivery-list-way-of-delivery-first">Деловые линии
+          </li>
+          <li class="page-container-contacts-way-of-delivery-way-of-delivery-list-way-of-delivery-second">Автотрейдинг
+          </li>
+          <li class="page-container-contacts-way-of-delivery-way-of-delivery-list-way-of-delivery-third">
+            ЖелДорЭкспедиция
+          </li>
+        </ul>
+      </section>
+    </div>
+  </main>
+  <footer class="page-footer main-footer">
+    <div class="page-footer main-footer-nav-wrapper-first">
+      <ul class="page-footer main-footer-nav-list-first">
+        <h2 class="page-footer main-footer-nav-title visually-hidden">Menu_footer-first</h2>
+        <li class="page-footer main-footer-nav-item"><a href="blank.html">Войти</a></li>
+        <li class="page-footer main-footer-nav-item"><a href="blank.html">Сравнить</a></li>
+        <li class="page-footer main-footer-nav-item"><a href="blank.html">Корзина</a></li>
+      </ul>
+    </div>
+    <div class="page-footer main-footer-nav-wrapper-second">
+      <ul class="page-footer main-footer-nav-service-list-second">
+        <h2 class="page-footer main-footer-nav-service-title">Menu_footer-second</h2>
+        <li class="page-footer main-footer-nav-service-item"><a href="blank.html">Доставка</a></li>
+        <li class="page-footer main-footer-nav-service-item"><a href="blank.html">Гарантия</a></li>
+        <li class="page-footer main-footer-nav-service-item"><a href="blank.html">Контакты</a></li>
+      </ul>
+    </div>
+    <ul class="page-footer main-footer-social">
+      <li>
+        <a class="page-footer main-footer-social-button" href="#">
+          <span class="page-footer main-footer-title visually-hidden">Фейсбук</span>
+          <svg width="32" height="31.8" fill=rgba(255, 255, 255, 0.3)></svg>
+        </a>
+      </li>
+      <li>
+        <a class="page-footer main-footer-social-button" href="#">
+          <span class="page-footer main-footer-title visually-hidden">Инстаграм</span>
+          <a width="32" height="32" fill=rgba(255, 255, 255, 0.3)></a>
+        </a>
+      </li>
+      <li>
+        <a class="page-footer main-footer-social-button" href="#">
+          <span class="page-footer main-footer-title visually-hidden">Твиттер</span>
+          <svg width="32" height="32" fill=rgba(255, 255, 255, 0.3)></svg>
+        </a>
+      </li>
+    </ul>
+    <a class="page-footer main-footer-company-logo">
+      <img src="img/logo-footer.png" alt="Логотип интернет-магазина гаджетов «Девайс»">
+    </a>
+    <a class="page-footer main-footer-logo">
+      <img src="img/logo_htmlacademy.png" alt="Логотип HTMLАкадемии «HTMLAcademy»">
+    </a>
+    <a class="page-footer main-footer-adress" href="г.Москва, ул. Строителей, 15">г.Москва, ул. Строителей, 15</a>
+    <a class="page-footer main-footer-phone" href="Тел.: +7 (495) 495-95-95">Тел.: +7 (495) 495-95-95</a>
+    <section class="modal modal-login">
+      <h2 class>Личный кабинет</h2>
+      <p class="modal-description">Введите пожалуйста свой логин и пароль</p>
+      <form class="login-form" action="https://echo.htmlacademy.ru/" method="post">
+        <p>
+          <label class="visually-hidden" for="login-login">Логин</label>
+          <input class="login-icon-user" id="login-login" type="text" name="login" placeholder="Имя Фамилия">
+        </p>
+        <p>
+          <label class="visually-hidden" for="login-password">Пароль</label>
+          <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="........">
+        </p>
+        <p class="login-help">
+          <label class="login-checkbox">
+            <input class="visually-hidden" type="checkbox" name="remember">
+            <span class="checkbox-indicator"></span>
+            Запомнить
+          </label>
+          <a class="restore" href="#">Забыл пароль</a>
+        </p>
+        <button class="button" type="submit">Войти</button>
+      </form>
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
+  </footer>
+</body>
+
 </html>
