--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Девайс</title>
   <link rel="stylesheet" href="http://fonts.fontstorage.com/import/opensans.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.cssl">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page-body inner-page">
